nginx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: main-http
spec:
  parentRefs:
    - name: main-gke-listener
      namespace: gateway

  hostnames:
    - gke.irori235.dev
  rules:
    - backendRefs:
        - name: nginx
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-http-app
spec:
  parentRefs:
    - name: main-gke-wildcard-listener
      namespace: gateway
  hostnames:
    - nginx.gke.irori235.dev
  rules:
    - backendRefs:
        - name: nginx
          port: 80
