nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-iap-ingress
  annotations:
    networking.gke.io/managed-certificates: nginx-iap-certificate
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
